--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <h1>Bus Travel Widget</h1>
         <br>
         <label for="">Points</label>
-        <input class="Points" value="" type="number" placeholder="eg. 3.33">
+        <input class="Points" value="" type="number" placeholder="enter points">
         <br>
         <br>
         <div class="dropdown">
