--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <br>
         <br>
         <div class="dropdown">
-            <button onclick="myFunction()" class="dropbtn">Start Location</button>
+            <button onclick="dropbtnLocation()" class="dropbtn">Start Location</button>
             <div id="myDropdown" class="dropdown-content">
               <a href="#Mitchells Plain">Mitchells Plain</a>
               <a href="#Dunoon">Dunoon</a>
