--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </label>
         </div>
         <br>
-        <input type="checkbox" class="returnTrip" name="returnTripCheckbox" value="Return Trip">
+        <input type="checkbox" class="returnTripCheckbox" name="returnTripCheckbox" value="Return Trip">
         <label for="returnTrip">Return Trip</label><br>
         <br>
         <button class="calculateBtn" type="button">Calculate</button>
